Use the prototype cache smarter, not harder, for getting sheets.  Bug 183859, r=sicking, sr=brendan.